--- a/tasks/_systemd.yml
+++ b/tasks/_systemd.yml
@@ -4,7 +4,7 @@
 # service_enabled: true
 
 - name: deploy {{ service_name }} systemd service
-  template:
+  ansible.builtin.template:
     src: systemd/{{ service_name }}.service.j2
     dest: /etc/systemd/system/{{ service_dest | default(service_name) }}.service
     owner: root
@@ -13,11 +13,11 @@
   register: systemd
 
 - name: reload systemd daemon # noqa no-handler
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: true
   when: systemd is changed
 
 - name: enable {{ service_name }} systemd service
-  systemd:
+  ansible.builtin.systemd:
     name: "{{ service_name }}.service"
     enabled: "{{ service_enabled | default(true) }}"
