--- a/tasks/_user.yml
+++ b/tasks/_user.yml
@@ -2,7 +2,7 @@
 # user_name: required
 
 - name: create {{ user_name }} system user
-  user:
+  ansible.builtin.user:
     name: "{{ user_name }}"
     shell: /usr/sbin/nologin
     system: true
