--- a/tasks/api.yml
+++ b/tasks/api.yml
@@ -1,10 +1,10 @@
 ---
-- import_tasks: _dependencies.yml
+- ansible.builtin.import_tasks: _dependencies.yml
   vars:
     packages_path: "{{ libretime_checkout_dest }}/api"
 
 - name: install api python package # noqa no-handler
-  pip:
+  ansible.builtin.pip:
     name: "file://{{ libretime_checkout_dest }}/api"
   notify:
     - restart libretime-api
@@ -12,7 +12,7 @@
   when: libretime_checkout is changed
 
 - name: deploy api config
-  template:
+  ansible.builtin.template:
     src: uwsgi/api.ini.j2
     dest: "{{ libretime_config_dir }}/api.ini"
     owner: "{{ libretime_user }}"
@@ -20,7 +20,7 @@
     mode: 0640
   notify: restart libretime-api
 
-- import_tasks: _systemd.yml
+- ansible.builtin.import_tasks: _systemd.yml
   vars:
     service_name: libretime-api
   notify: restart libretime-api
