--- a/tasks/api_client.yml
+++ b/tasks/api_client.yml
@@ -1,6 +1,6 @@
 ---
 - name: install api_client python package # noqa no-handler
-  pip:
+  ansible.builtin.pip:
     name: "file://{{ libretime_checkout_dest }}/api_client"
   notify:
     - restart libretime-analyzer
