--- a/tasks/liquidsoap.yml
+++ b/tasks/liquidsoap.yml
@@ -1,12 +1,12 @@
 ---
 - name: install liquidsoap
-  apt:
+  ansible.builtin.apt:
     state: present
     name: liquidsoap
   when: libretime_liquidsoap_package_url is not defined
 
 - name: install liquidsoap from url
-  apt:
+  ansible.builtin.apt:
     state: present
     deb: "{{ libretime_liquidsoap_package_url }}"
   when: libretime_liquidsoap_package_url is defined
