--- a/tasks/worker.yml
+++ b/tasks/worker.yml
@@ -1,18 +1,18 @@
 ---
 - name: install worker python package # noqa no-handler
-  pip:
+  ansible.builtin.pip:
     name: "file://{{ libretime_checkout_dest }}/worker"
   notify: restart libretime-worker
   when: libretime_checkout is changed
 
 - name: create worker working directory
-  file:
+  ansible.builtin.file:
     path: "{{ libretime_home }}/worker"
     owner: "{{ libretime_user }}"
     group: "{{ libretime_user }}"
     state: directory
 
-- import_tasks: _systemd.yml
+- ansible.builtin.import_tasks: _systemd.yml
   vars:
     service_name: libretime-worker
   notify: restart libretime-worker
