--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 libretime_allow_restart: true
 
 libretime_root_url: "http://localhost:{{ libretime_listen_port }}/"
-libretime_user: www-data
+libretime_user: libretime
 libretime_listen_port: 80
 libretime_max_upload_size: 512M
 
