--- a/tasks/analyzer.yml
+++ b/tasks/analyzer.yml
@@ -19,5 +19,5 @@
 
 - ansible.builtin.import_tasks: _systemd.yml
   vars:
-    service_name: libretime-analyzer
+    service_name: libretime-analyzer.service
   notify: restart libretime-analyzer
