--- a/tasks/api.yml
+++ b/tasks/api.yml
@@ -22,5 +22,5 @@
 
 - ansible.builtin.import_tasks: _systemd.yml
   vars:
-    service_name: libretime-api
+    service_name: libretime-api.service
   notify: restart libretime-api
