--- a/tasks/worker.yml
+++ b/tasks/worker.yml
@@ -14,5 +14,5 @@
 
 - ansible.builtin.import_tasks: _systemd.yml
   vars:
-    service_name: libretime-worker
+    service_name: libretime-worker.service
   notify: restart libretime-worker
