--- a/tasks/analyzer.yml
+++ b/tasks/analyzer.yml
@@ -9,13 +9,13 @@
   notify: restart libretime-analyzer
   when: libretime_checkout is changed
 
-- name: create analyzer working directory
+- name: create analyzer home directory
   ansible.builtin.file:
     path: "{{ libretime_home }}/analyzer"
     owner: "{{ libretime_user }}"
     group: "{{ libretime_user }}"
     state: directory
-    mode: 0755
+    recurse: true
 
 - ansible.builtin.import_tasks: _systemd.yml
   vars:
