chore: move molecule file in parent dir

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -23,6 +23,9 @@ platforms:
 
 provisioner:
   name: ansible
+  playbooks:
+    converge: ../converge.yml
 
 verifier:
   name: testinfra
+  directory: ../tests
