feat: change default storage path to /srv/libretime

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,7 +14,7 @@ libretime_home: /var/lib/libretime
 libretime_log_dir: /var/log/libretime
 libretime_config_dir: /etc/airtime
 libretime_config_filepath: "{{ libretime_config_dir }}/airtime.conf"
-libretime_storage_dir: /srv/libretime/data
+libretime_storage_dir: /srv/libretime
 
 libretime_setup: true
 
