--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -89,7 +89,7 @@
 
 - name: deploy configuration file
   ansible.builtin.template:
-    src: libretime/config.ini.j2
+    src: libretime/config.yml.j2
     dest: "{{ libretime_config_filepath }}"
     owner: "{{ libretime_user }}"
     group: "{{ libretime_user }}"
