test: only run a single platform at once

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -13,13 +13,13 @@ platforms:
       - network_name: private_network
         ip: 192.168.121.10
 
-  - name: focal
-    box: generic/ubuntu2004
-    memory: 1024
-    cpus: 2
-    interfaces:
-      - network_name: private_network
-        ip: 192.168.121.11
+  # - name: focal
+  #   box: generic/ubuntu2004
+  #   memory: 1024
+  #   cpus: 2
+  #   interfaces:
+  #     - network_name: private_network
+  #       ip: 192.168.121.10
 
 provisioner:
   name: ansible
