--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,7 @@ galaxy_info:
   issue_tracker_url: https://github.com/jooola/ansible-role-libretime/issues
   license: GPL-3.0-only
 
-  min_ansible_version: 2.8
+  min_ansible_version: "2.8"
 
   platforms:
     - name: Debian
