--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,6 +14,10 @@
     {
       "matchManagers": ["pip_setup", "pip_requirements"],
       "addLabels": ["python"]
+    },
+    {
+      "matchUpdateTypes": ["patch"],
+      "automerge": true
     }
   ]
 }
