--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -56,14 +56,13 @@
     state: directory
     recurse: true
   with_items:
+    - path: "{{ libretime_config_dir }}"
+      owner: root
+      group: root
     - path: "{{ libretime_home }}"
       owner: "{{ libretime_user }}"
       group: "{{ libretime_user }}"
     - path: "{{ libretime_log_dir }}"
-      owner: "{{ libretime_user }}"
-      group: "{{ libretime_user }}"
-    - path: "{{ libretime_config_dir }}"
-      # TODO: Config dir should not be writable, but liquidsoap writes to this dir.
       owner: "{{ libretime_user }}"
       group: "{{ libretime_user }}"
     - path: "{{ libretime_storage_dir }}"
