--- a/example/site.yml
+++ b/example/site.yml
@@ -5,7 +5,7 @@
     libretime_allow_restart: false
 
     libretime_public_url: https://station.radio.org
-    libretime_legacy_api_key: some_secret_generated_key!
+    libretime_api_key: some_secret_generated_key!
 
     libretime_icecast_admin_password: some_secret_generated_key!
     libretime_icecast_source_password: some_secret_generated_key!
