--- a/tasks/api.yml
+++ b/tasks/api.yml
@@ -6,6 +6,7 @@
 - name: install api python package # noqa no-handler
   ansible.builtin.pip:
     name: "file://{{ libretime_checkout_dest }}/api"
+    state: latest # noqa package-latest
   notify:
     - restart libretime-api
   when: libretime_checkout is changed
