--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -16,32 +16,8 @@
     name: icecast2
     state: restarted
 
-- name: restart libretime-api
+- name: restart libretime
   ansible.builtin.systemd:
-    name: libretime-api
-    state: restarted
-  when: libretime_allow_restart
-
-- name: restart libretime-playout
-  ansible.builtin.systemd:
-    name: libretime-playout
-    state: restarted
-  when: libretime_allow_restart
-
-- name: restart libretime-liquidsoap
-  ansible.builtin.systemd:
-    name: libretime-liquidsoap
-    state: restarted
-  when: libretime_allow_restart
-
-- name: restart libretime-worker
-  ansible.builtin.systemd:
-    name: libretime-worker
-    state: restarted
-  when: libretime_allow_restart
-
-- name: restart libretime-analyzer
-  ansible.builtin.systemd:
-    name: libretime-analyzer
+    name: libretime.target
     state: restarted
   when: libretime_allow_restart
