--- a/tasks/api.yml
+++ b/tasks/api.yml
@@ -7,8 +7,7 @@
   ansible.builtin.pip:
     name: "file://{{ libretime_checkout_dest }}/api"
     state: latest # noqa package-latest
-  notify:
-    - restart libretime-api
+  notify: restart libretime
   when: libretime_checkout is changed
 
 - name: create api home directory
@@ -23,10 +22,10 @@
   vars:
     service_name: libretime-api.socket
   notify:
-    - restart libretime-api
+    - restart libretime
     - restart nginx
 
 - ansible.builtin.import_tasks: _systemd.yml
   vars:
     service_name: libretime-api.service
-  notify: restart libretime-api
+  notify: restart libretime
