--- a/tasks/api_client.yml
+++ b/tasks/api_client.yml
@@ -3,6 +3,5 @@
   ansible.builtin.pip:
     name: "file://{{ libretime_checkout_dest }}/api-client"
     state: latest # noqa package-latest
-  notify:
-    - restart libretime-playout
+  notify: restart libretime
   when: libretime_checkout is changed
